force-app/main/default/objects/Owner_for_Dealer__c/Owner_for_Dealer__c.object-meta.xml
<CustomObject>
    <description>Junction object to align owners and dealers</description>
    <label>Owner for Dealer</label>
    <nameField>
        <displayFormat>OFD-{0000000}</displayFormat>
        <label>OFD ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Owners for Dealer</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>