force-app/main/default/objects/Owner_for_Dealer__c/fields/Dealer__c.field-meta.xml
<CustomField>
    <fullName>Dealer__c</fullName>
    <description>Field Type: Store Data
Integrated: N</description>
    <label>Dealer</label>
    <referenceTo>Dealer__c</referenceTo>
    <relationshipLabel>Owners for Dealer</relationshipLabel>
    <relationshipName>Owners_for_Dealer</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>