force-app/main/default/objects/Owner_for_Dealer__c/fields/Dealer_Date_Inactivated__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Date_Inactivated__c</fullName>
    <description>This is the Date the Dealer was inactivated.</description>
    <inlineHelpText>Please enter the Date the Dealer was inactivated.</inlineHelpText>
    <label>Dealer Date Inactivated</label>
    <type>DateTime</type>
</CustomField>