force-app/main/default/objects/Owner_for_Dealer__c/fields/IsActive_Dealer__c.field-meta.xml
<CustomField>
    <fullName>IsActive_Dealer__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This is to indicate if the Dealer is Active.</description>
    <inlineHelpText>Please check this if the Dealer is Active.</inlineHelpText>
    <label>Active Dealer</label>
    <type>Checkbox</type>
</CustomField>