force-app/main/default/objects/Owner_for_Dealer__c/fields/IsActive_Owner__c.field-meta.xml
<CustomField>
    <fullName>IsActive_Owner__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This is to indicate if the Owner is Active.</description>
    <inlineHelpText>Check this box if the Owner is Active.</inlineHelpText>
    <label>Active Owner</label>
    <type>Checkbox</type>
</CustomField>