force-app/main/default/objects/Owner_for_Dealer__c/fields/Owner_Date_Inactivated__c.field-meta.xml
<CustomField>
    <fullName>Owner_Date_Inactivated__c</fullName>
    <description>This is the date the Owner was inactivated.</description>
    <inlineHelpText>Please enter the date the Owner was inactivated.</inlineHelpText>
    <label>Owner Date Inactivated</label>
    <type>DateTime</type>
</CustomField>