force-app/main/default/objects/Owner_for_Dealer__c/fields/Owners__c.field-meta.xml
<CustomField>
    <fullName>Owners__c</fullName>
    <description>Owner name
Field Type: Store Data
Integrated: N</description>
    <inlineHelpText>Owner Name</inlineHelpText>
    <label>Owner</label>
    <referenceTo>Owner__c</referenceTo>
    <relationshipLabel>Owners for Dealer (Owners)</relationshipLabel>
    <relationshipName>Owners_for_Store</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>