force-app/main/default/objects/Owner_for_Dealer__c/fields/Ownership_Percent__c.field-meta.xml
<CustomField>
    <fullName>Ownership_Percent__c</fullName>
    <description>Percentage of ownership in the store
Field Type: Store Data
Integrated: N</description>
    <inlineHelpText>Percentage of ownership in the store</inlineHelpText>
    <label>Ownership Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>