force-app/main/default/objects/Owner_for_Dealer__c/fields/Principal_Owner__c.field-meta.xml
<CustomField>
    <fullName>Principal_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this a valued Owner
Field Type: Store Data
Integrated: N</description>
    <inlineHelpText>Person who gets single consensus from ownership group.</inlineHelpText>
    <label>Principal Owner</label>
    <type>Checkbox</type>
</CustomField>