force-app/main/default/objects/Owner_for_Dealer__c/fields/Type_of_Ownership__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Ownership__c</fullName>
    <description>What type of Ownership
Field Type: Store Data
Integrated: N</description>
    <inlineHelpText>What type of ownership?</inlineHelpText>
    <label>Type of Ownership</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Corporation</fullName>
            </value>
            <value>
                <fullName>LLC</fullName>
            </value>
            <value>
                <fullName>LLP</fullName>
            </value>
            <value>
                <fullName>Sole Proprietor</fullName>
            </value>
            <value>
                <fullName>Partnership</fullName>
            </value>
            <value>
                <fullName>S-Corp</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>